post release, prep pom for next dev

--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,13 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.atdixon</groupId>
     <artifactId>vroom</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Vroom</name>
@@ -47,7 +46,8 @@
         <connection>scm:git:git@github.com:atdixon/vroom.git</connection>
         <developerConnection>scm:git:git@github.com:atdixon/vroom.git</developerConnection>
         <url>git@github.com:atdixon/vroom.git</url>
-    </scm>
+        <tag>HEAD</tag>
+  </scm>
 
     <dependencies>
         <dependency>
