--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.github.atdixon</groupId>
     <artifactId>vroom</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Vroom</name>
@@ -46,7 +46,7 @@
         <connection>scm:git:git@github.com:atdixon/vroom.git</connection>
         <developerConnection>scm:git:git@github.com:atdixon/vroom.git</developerConnection>
         <url>git@github.com:atdixon/vroom.git</url>
-        <tag>vroom-0.1</tag>
+        <tag>HEAD</tag>
   </scm>
 
     <dependencies>
