--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.atdixon</groupId>
-    <artifactId>vroom</artifactId>
+    <artifactId>vroom-parent</artifactId>
     <version>0.3.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>Vroom</name>
-    <description>Work immutably, robustly and in a knowledge-oriented way with Entity maps in Java.</description>
-    <url>https://github.com/atdixon/vroom</url>
+    <packaging>pom</packaging>
 
     <licenses>
         <license>
@@ -47,107 +43,19 @@
         <developerConnection>scm:git:git@github.com:atdixon/vroom.git</developerConnection>
         <url>git@github.com:atdixon/vroom.git</url>
         <tag>HEAD</tag>
-  </scm>
+    </scm>
 
-    <dependencies>
-        <!-- shaded dependencies -->
-        <dependency>
-            <groupId>org.clojure</groupId>
-            <artifactId>clojure</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>3.0.1</version>
-        </dependency>
-        <!-- /shaded dependencies -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.9.10</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>vroom</module>
+        <module>quality</module>
+    </modules>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.2</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <minimizeJar>true</minimizeJar>
-                            <createSourcesJar>true</createSourcesJar>
-                            <filters>
-                                <filter>
-                                    <artifact>org.clojure:clojure</artifact>
-                                    <includes>
-                                        <include>clojure/lang/PersistentHashMap**.class</include>
-                                        <include>clojure/lang/AFn**.class</include>
-                                        <include>clojure/lang/APersistentMap**.class</include>
-                                        <include>clojure/lang/ATransientMap**.class</include>
-                                        <include>clojure/lang/AMapEntry**.class</include>
-                                        <include>clojure/lang/MapEntry**.class</include>
-                                        <include>clojure/lang/Util**.class</include>
-                                        <include>clojure/lang/APersistentVector**.class</include>
-                                        <include>clojure/lang/Murmur3.class</include>
-                                        <include>clojure/lang/Box.class</include>
-                                        <include>clojure/lang/Associative.class</include>
-                                        <include>clojure/lang/Counted.class</include>
-                                        <include>clojure/lang/Seqable.class</include>
-                                        <include>clojure/lang/Sequential.class</include>
-                                        <include>clojure/lang/ArityException.class</include>
-                                        <include>clojure/lang/MapEquivalence.class</include>
-                                        <include>clojure/lang/Reversible.class</include>
-                                        <include>clojure/lang/Indexed.class</include>
-                                        <include>clojure/lang/IPersistentStack.class</include>
-                                        <include>clojure/lang/IPersistentVector.class</include>
-                                        <include>clojure/lang/IPersistentMap.class</include>
-                                        <include>clojure/lang/ISeq.class</include>
-                                        <include>clojure/lang/IFn.class</include>
-                                        <include>clojure/lang/IObj.class</include>
-                                        <include>clojure/lang/IEditableCollection.class</include>
-                                        <include>clojure/lang/IHashEq.class</include>
-                                        <include>clojure/lang/IPersistentCollection.class</include>
-                                        <include>clojure/lang/ITransientCollection.class</include>
-                                        <include>clojure/lang/ILookup.class</include>
-                                        <include>clojure/lang/IMeta.class</include>
-                                        <include>clojure/lang/ITransientMap.class</include>
-                                        <include>clojure/lang/ITransientAssociative.class</include>
-                                        <include>clojure/lang/IMapIterable.class</include>
-                                        <include>clojure/lang/IMapEntry.class</include>
-                                    </includes>
-                                </filter>
-                            </filters>
-                            <relocations>
-                                <relocation>
-                                    <pattern>clojure.lang</pattern>
-                                    <shadedPattern>com.github.atdixon.vroom.swipe</shadedPattern>
-                                </relocation>
-                            </relocations>
-                            <transformers>
-                                <!-- copy over MANIFEST.MF from unshaded jar, but mark jar as shaded too -->
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <manifestEntries>
-                                        <X-Build-Shaded>true</X-Build-Shaded>
-                                    </manifestEntries>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+                <version>3.3</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -156,7 +64,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>2.5.3</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <useReleaseProfile>false</useReleaseProfile>
@@ -165,6 +73,35 @@
                 </configuration>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>2.4.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.10.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.6</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.6</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <distributionManagement>
@@ -186,7 +123,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>2.4</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -200,7 +136,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.1</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -213,7 +148,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -227,7 +161,6 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.5</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
