--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.github.atdixon</groupId>
     <artifactId>vroom-parent</artifactId>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.3.1</version>
     <packaging>pom</packaging>
 
     <licenses>
@@ -42,7 +42,7 @@
         <connection>scm:git:git@github.com:atdixon/vroom.git</connection>
         <developerConnection>scm:git:git@github.com:atdixon/vroom.git</developerConnection>
         <url>git@github.com:atdixon/vroom.git</url>
-        <tag>HEAD</tag>
+        <tag>vroom-parent-0.3.1</tag>
     </scm>
 
     <modules>
