--- a/quality/pom.xml
+++ b/quality/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.github.atdixon</groupId>
         <artifactId>vroom-parent</artifactId>
-        <version>0.3.10-SNAPSHOT</version>
+        <version>0.3.10</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
