--- a/vroom/pom.xml
+++ b/vroom/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.github.atdixon</groupId>
         <artifactId>vroom-parent</artifactId>
-        <version>0.3.11-SNAPSHOT</version>
+        <version>0.3.11</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
