--- a/bench/pom.xml
+++ b/bench/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>vivean-parent</artifactId>
         <groupId>com.github.atdixon</groupId>
-        <version>0.4.0-beta-SNAPSHOT</version>
+        <version>0.4.0-beta</version>
     </parent>
 
     <artifactId>vivean-bench</artifactId>
