--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.github.atdixon</groupId>
     <artifactId>vivean-parent</artifactId>
-    <version>0.4.0-beta-SNAPSHOT</version>
+    <version>0.4.0-beta</version>
     <packaging>pom</packaging>
 
     <name>vivean Parent POM</name>
@@ -46,7 +46,7 @@
         <connection>scm:git:git@github.com:atdixon/vivean.git</connection>
         <developerConnection>scm:git:git@github.com:atdixon/vivean.git</developerConnection>
         <url>git@github.com:atdixon/vivean.git</url>
-        <tag>HEAD</tag>
+        <tag>vivean-parent-0.4.0-beta</tag>
     </scm>
 
     <modules>
