--- a/quality/pom.xml
+++ b/quality/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.github.atdixon</groupId>
         <artifactId>vivean-parent</artifactId>
-        <version>0.4.0-beta-SNAPSHOT</version>
+        <version>0.4.0-beta</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
